@@ -3,7 +3,7 @@
 # tsort. The file has the base package name on the left, and the package it
 # depends on is on the right. It is sorted.
 
-my $arch=`dpkg-architecture -qDEB_BUILD_ARCH`;
+my $arch=`dpkg-architecture -qDEB_HOST_ARCH`;
 chomp $arch;
 
 open(LIST, "package-list") || die "package-list: $!";
