@@ -51,6 +51,9 @@ linux-kernel-di (0.8) unstable; urgency=low
   * Elide dependencies from package-lists if the depended-upon package
     will not be built for the target arch.
   * Update docs, but they're still just a brain-dump.
+  * Add support for cross "compiling".
+  * Change MODDIR to SOURCEDIR and take the kernel from there too.
+  * Add my build-all script.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 24 Oct 2003 16:13:06 -0400
 
